--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -17,15 +17,15 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description,rows: 6 %>
+    <%= f.text_area :description, rows: 6 %>
   </div>
   <div class="field">
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
   <div class="field">
-    <%= f.label :prince %><br>
-    <%= f.text_field :prince %>
+    <%= f.label :price %><br>
+    <%= f.text_field :price %>
   </div>
   <div class="actions">
     <%= f.submit %>
