--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Prince:</strong>
-  <%= @product.prince %>
+  <strong>Price:</strong>
+  <%= @product.price %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
