--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,13 @@
 </head>
 <body class='<%= controller.controller_name %>' >
 	<div id="banner">
-		<%= image_tag("logo.png") %>
+		<%= image_tag("logo.jpg") %>
 		<%= @page_title || "Pragmatic Bookshelf" %>
 	</div>
 	<div id="columns">
 		<div id="side">
 			<ul>
-				<li><a><%= Time.now %></p></li>
+				<li><p><%= Time.now %></p></li>
 				<li><a href="http://www....">Home</a></li>
 				<li><a href="http://www..../faq">Questions</a></li>
 				<li><a href="http://www..../news">News</a></li>
