--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@
  *= require_self
  *= require_tree .
  */
-/* START_HIGHLIGHT */
+
 #banner {
   background: #9c9;
   padding: 10px;
@@ -48,7 +48,27 @@
     padding: 1em 2em;
     width: 13em;
     background: #141;
-	
+
+
+	  form, div {
+      display: inline;
+    }  
+ 
+    input {
+      font-size: small;
+    }
+
+    #cart {
+      font-size: smaller;
+      color:     white;
+
+      table {
+        border-top:    1px dotted #595;
+        border-bottom: 1px dotted #595;
+        margin-bottom: 10px;
+      }
+    }
+
     ul {
       padding: 0;
       li {
@@ -61,4 +81,3 @@
     }
   }
 }
-/* END_HIGHLIGHT */
